--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,13 @@
   "short_name": "pwa",
   "icons": [
     {
-      "src": "./img/icons/icon-48.png",
-      "sizes": "48x48",
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
